--- a/final.css
+++ b/final.css
@@ -410,7 +410,10 @@ hr {
 		text-decoration: none;
 		color: rgba(255,255,255,.7);
 	}
-
+	#time
+	{
+	font-size: 20px;
+	}
 /*********************************************************************************/
 /* Welcome                                                                       */
 /*********************************************************************************/
@@ -453,6 +456,7 @@ hr {
 		width: 750px;
 		padding: 10px;
 		margin-bottom: 20px;
+		margin-left: 120px;
 	}
 	th{
 		border-bottom: solid;
